[Feat] added localization support still needs keys to be created and linked to texts

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -1,3 +1,7 @@
 {
-  "projectPalestine": "مشروع فلسطين"
+  "hero":{
+    "title":"وسيلة لمقاطعة الإبادة الجماعية وداعميها",
+    "search":"ابحث في المنتجات او الشركات",
+    "search-placeholder":"ابحث هنا"
+  } 
 }
