--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,3 +1,7 @@
 {
-    "projectPalestine": "Project Palestine"
-  }
+  "hero":{
+    "title":"A way for us to boycott the genocide and its supporters",
+    "search":"Search products or companies",
+    "search-placeholder":"Search here"
+  } 
+}
