[locales] finished footer

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -9,6 +9,12 @@
     "download": "تنزيل",
     "donate":"تبرع"
   },
+  "footer":{
+    "contact":"تواصل",
+    "about":"عن المشروع",
+    "contribute":"ساهم معنا",
+    "join-discord":"سيرفر الديسكورد"
+  },
   "hero":{
     "title":"وسيلة لمقاطعة الإبادة الجماعية وداعميها",
     "search":"ابحث في المنتجات او الشركات",
