--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -9,6 +9,12 @@
     "download": "Download",
     "donate":"Donate"
   },
+  "footer":{
+    "contact":"Contact",
+    "about":"About",
+    "contribute":"Contribute with us",
+    "join-discord":"Join our discord"
+  },
   "hero":{
     "title":"A way for us to boycott the genocide and its supporters",
     "search":"Search products or companies",
