[locale] finished download/coming soon page

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -60,5 +60,9 @@
 
     "feature-5-title":"تحقق من صحه الأخبار",
     "feature-5-desc":"أداة لفحص صحة الأخبار، تصنيف الأخبار الزائفة، ومنع انتشار البروباجاندا."
+  },
+  "download":{
+    "coming-soon":"قادم قريبا"
+  },
   }
 }
