[locale] donate page/coming soon

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -64,5 +64,8 @@
   "download":{
     "coming-soon":"قادم قريبا"
   },
+  "donate":{
+    "coming-soon":"قادم قريبا",
+    "back-to-home":"رجوع إلي الصفحه الرئيسيه"
   }
 }
