[locale] added forms to translation

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -59,7 +59,9 @@
     "feature-4-desc":"صفحة لتكريم أولئك الذين توفوا في غزة، ومشاركة قصصهم، ومقاطع الفيديو، والصور، وأحلامهم.",
 
     "feature-5-title":"تحقق من صحه الأخبار",
-    "feature-5-desc":"أداة لفحص صحة الأخبار، تصنيف الأخبار الزائفة، ومنع انتشار البروباجاندا."
+    "feature-5-desc":"أداة لفحص صحة الأخبار، تصنيف الأخبار الزائفة، ومنع انتشار البروباجاندا.",
+
+    "form-url":"https://forms.gle/6sWC9G4fJcz8Zn9T9"
   },
   "download":{
     "coming-soon":"قادم قريبا"
