--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -70,6 +70,20 @@
     "coming-soon":"قادم قريبا",
     "back-to-home":"رجوع إلي الصفحه الرئيسيه"
   },
+  "about": {
+    "tech": "التكنولوجيا",
+    "tech-desc": "نقوم ببناء أدوات باستخدام التكنولوجيا. مبرمجونا هم محاربو الحرية الذين يستخدمون البرمجه كقوة للخير.",
+    "tech-vol-btn": "التطوع كمبرمج",
+    "media": "المحتوي",
+    "media-desc": "نعرض قصصنا بتنوع وسائط متعددة مثل الفيديوهات والأفلام، باستخدام الفن كوسيلة للتعبير.",
+    "media-vol-btn": "التطوع كصانع محتوى",
+    "research": "البحث",
+    "research-desc": "نشارك الحقيقة مع العالم من خلال البحث والكتابة والأوراق البحثية. إذا بدأت الصهيونية بورقة واحدة، فإن إنهائها يمكن أن يكون على بُعد ورقة واحدة.",
+    "research-vol-btn": "التطوع كباحث",
+
+    "headline": "مشروع فلسطين",
+    "paragraph": "مشروع وُلد لاستعادة العدالة ومساعدة محاربي الحرية ضد القسوة اللاإنسانية للفصل العنصري والاحتلال. نعتقد أن لدينا جميعًا دور في محاربة الظلم، وإذا إتحدنا جميعًا، يمكننا أن نصل إلى التحرير الذي يعد الطريق الأمثل نحو السلام."
+  },
   "add-company": {
     "profile": "بروفايل الشركة",
     "disclaimer": "سيتم عرض هذه البيانات علنيًا، لذا تأكد من دقتها.",
